make ds build a job