@@ -26,7 +26,9 @@ import ai.starwhale.mlops.domain.task.status.watchers.TaskWatcherForSchedule;
 import ai.starwhale.mlops.exception.SwProcessException;
 import ai.starwhale.mlops.exception.SwProcessException.ErrorType;
 import ai.starwhale.mlops.schedule.SwTaskScheduler;
-import ai.starwhale.mlops.schedule.TaskRunningEnvBuilder;
+import ai.starwhale.mlops.schedule.entrypoint.TaskCommand;
+import ai.starwhale.mlops.schedule.entrypoint.TaskContainerEntrypointBuilder;
+import ai.starwhale.mlops.schedule.entrypoint.TaskContainerEntrypointBuilderFinder;
 import ai.starwhale.mlops.schedule.reporting.TaskReportReceiver;
 import ai.starwhale.mlops.storage.StorageAccessService;
 import cn.hutool.json.JSONUtil;
@@ -35,6 +37,7 @@ import io.kubernetes.client.openapi.models.V1EnvVar;
 import io.kubernetes.client.openapi.models.V1EnvVarSource;
 import io.kubernetes.client.openapi.models.V1Job;
 import io.kubernetes.client.openapi.models.V1ObjectFieldSelector;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -54,24 +57,24 @@ public class K8sSwTaskScheduler implements SwTaskScheduler {
 
     final K8sJobTemplate k8sJobTemplate;
 
-    final TaskRunningEnvBuilder taskRunningEnvBuilder;
+    final TaskContainerEntrypointBuilderFinder taskContainerEntrypointBuilderFinder;
     final String restartPolicy;
     final int backoffLimit;
     final StorageAccessService storageAccessService;
     final ThreadPoolTaskScheduler cmdExecThreadPool;
 
+
     public K8sSwTaskScheduler(
             K8sClient k8sClient,
             K8sJobTemplate k8sJobTemplate,
-            TaskRunningEnvBuilder taskRunningEnvBuilder,
+            TaskContainerEntrypointBuilderFinder taskContainerEntrypointBuilderFinder,
             String restartPolicy,
             Integer backoffLimit,
             StorageAccessService storageAccessService,
-            ThreadPoolTaskScheduler cmdExecThreadPool
-    ) {
+            ThreadPoolTaskScheduler cmdExecThreadPool) {
         this.k8sClient = k8sClient;
         this.k8sJobTemplate = k8sJobTemplate;
-        this.taskRunningEnvBuilder = taskRunningEnvBuilder;
+        this.taskContainerEntrypointBuilderFinder = taskContainerEntrypointBuilderFinder;
         this.storageAccessService = storageAccessService;
         this.restartPolicy = restartPolicy;
         this.backoffLimit = backoffLimit;
@@ -118,6 +121,7 @@ public class K8sSwTaskScheduler implements SwTaskScheduler {
 
     private void deployTaskToK8s(Task task) {
         log.debug("deploying task to k8s {} ", task.getId());
+        TaskContainerEntrypointBuilder tceb = taskContainerEntrypointBuilderFinder.findTceb(task);
         try {
             V1Job k8sJob = k8sJobTemplate.loadJob(K8sJobTemplate.WORKLOAD_TYPE_EVAL);
 
@@ -129,10 +133,12 @@ public class K8sSwTaskScheduler implements SwTaskScheduler {
 
             k8sJobTemplate.getContainersTemplates(k8sJob).forEach(templateContainer -> {
                 ContainerOverwriteSpec containerOverwriteSpec = new ContainerOverwriteSpec(templateContainer.getName());
-                containerOverwriteSpec.setEnvs(buildCoreContainerEnvs(task));
-                containerOverwriteSpec.setCmds(List.of("run"));
+                containerOverwriteSpec.setEnvs(buildCoreContainerEnvs(tceb.buildContainerEnvs(task)));
+                TaskCommand taskCommand = tceb.getCmd(task);
+                containerOverwriteSpec.setCmds(taskCommand.getCmd() == null ? List.of(): Arrays.asList(taskCommand.getCmd()));
+                containerOverwriteSpec.setEntrypoint(taskCommand.getEntrypoint() == null ? List.of(): Arrays.asList(taskCommand.getEntrypoint()));
                 containerOverwriteSpec.setResourceOverwriteSpec(getResourceSpec(task));
-                containerOverwriteSpec.setImage(jobRuntime.getImage());
+                containerOverwriteSpec.setImage(tceb.getImage(task));
                 containerSpecMap.put(templateContainer.getName(), containerOverwriteSpec);
             });
 
@@ -213,8 +219,8 @@ public class K8sSwTaskScheduler implements SwTaskScheduler {
     }
 
     @NotNull
-    private List<V1EnvVar> buildCoreContainerEnvs(Task task) {
-        var envs = mapToEnv(taskRunningEnvBuilder.buildCoreContainerEnvs(task));
+    private List<V1EnvVar> buildCoreContainerEnvs(Map<String, String> env) {
+        var envs = mapToEnv(env);
         envs.add(
                 new V1EnvVar()
                         .name("SW_POD_NAME")
